# smolvault

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  README.md  log_conf.yaml  logging.conf  pyproject.toml  pyproject.toml.bak  requirements.txt  tasks.py
.github/workflows/: ci-tests.yml  reviewdog.yml  tf-lint.yml
scripts/: start_app.sh  start_dev.sh  start_w_gunicorn.sh  test.sh
src/smolvault/: __init__.py  auth.py  config.py  main.py  models.py
src/smolvault/auth/: decoder.py  models.py
src/smolvault/cache/: cache_manager.py
src/smolvault/clients/: aws.py  database.py
src/smolvault/validators/: operation_validator.py
terraform/: iam.tf  providers.tf  s3.tf  variables.tf
tests/: conftest.py  factories.py  test_cache_manager.py  test_delete_file.py  test_endpoints.py  test_file_uploads.py  test_search_by_tag.py  test_security.py  testing.env
