[tool.poetry]
name = "smolvault"
version = "0.4.0"
description = ""
license = "MIT"
authors = ["Zach Fuller <zach.fuller1222@gmail.com>"]
readme = "README.md"
packages = [{include = "smolvault", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.4.0"
hypercorn = "^0.17.3"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
bcrypt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["essential"], version = "^1.34.158"}
pre-commit = "^3.8.0"
ruff = "^0.5.0"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
moto = {extras = ["all"], version = "^5.0.12"}
invoke = "^2.2.0"
rich = "^13.7.1"
types-pyjwt = "^1.7.1"
types-passlib = "^1.7.7.20240327"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--cov=smolvault", "--cov-report=html"]

[tool.coverage.report]
ignore_errors = true

[tool.coverage.run]
branch = true
omit = ["**/__init__.py"]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "ASYNC", "S", "B", "ERA", "PLE", "PLW", "PLC", "PLW", "PERF", "RUF", "SIM", "PT", "T20", "PTH", "LOG", "G"]
ignore = ["E501", "S101"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
