[project]
name = "smolvault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.2",
    "fastapi>=0.112.1",
    "sqlmodel>=0.0.21",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "hypercorn>=0.17.3",
    "pyjwt[crypto]>=2.9.0",
    "bcrypt>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "mypy>=1.11.1",
    "boto3-stubs[essential]>=1.35.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "moto[all]>=5.0.13",
    "invoke>=2.2.0",
    "rich>=13.7.1",
    "types-pyjwt>=1.7.1",
    "httpx>=0.27.0",
]
