[project]
name = "smolvault"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.2",
    "fastapi>=0.112.1",
    "sqlmodel>=0.0.21",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.4.0",
    "hypercorn>=0.17.3",
    "pyjwt[crypto]>=2.9.0",
    "bcrypt>=4.2.0",
    "sentry-sdk[fastapi]>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "mypy>=1.11.1",
    "boto3-stubs[essential]>=1.35.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "moto[all]>=5.0.13",
    "invoke>=2.2.0",
    "rich>=13.7.1",
    "types-pyjwt>=1.7.1",
    "httpx>=0.27.0",
    "pytest-sugar>=1.0.0",
    "anyio>=4.4.0",
    "polyfactory>=2.16.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--cov=smolvault", "--cov-report=html", "--cov-report=term"]

[tool.coverage.report]
ignore_errors = true

[tool.coverage.run]
branch = true
omit = ["**/__init__.py"]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "ASYNC", "S", "B", "ERA", "PLE", "PLW", "PLC", "PLW", "PERF", "RUF", "SIM", "PT", "T20", "PTH", "LOG", "G"]
ignore = ["E501", "S101"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
